# PyELEGANT

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py
conda_envs/: pyelegant-0.3-apcpu.yaml  pyelegant-0.4-apcpu.yaml  pyelegant-0.5-apcpu.yaml  pyelegant-0.6-apcpu.yaml  pyelegant-0.7-apcpu.yaml  pyelegant-0.8-apcpu.yaml  pyelegant-2020-0.1-apcpu.yaml  pyelegant-2020-0.2-apcpu.yaml  pyelegant_conda_functions.sh
demo/: .gitattributes  20170905_bare.lat  20170905_bare.lte  correct_tunes_chroms.ipynb  demo_CB_hybrid_simplex.ipynb  demo_calc_plot_twiss.ipynb  demo_calc_plot_twiss_GUI.ipynb  demo_closed_orbit.ipynb  demo_cmap.ipynb  demo_correct_tunes_chroms.ipynb  demo_find_aper.ipynb  demo_fma.ipynb  demo_gen_LTE_from_param.ipynb  demo_gen_LTE_with_alter_elements.ipynb  demo_hybrid_simplex.ipynb  demo_hybridsimplex_optim.ipynb  demo_mom_aper_tau.ipynb  demo_nonlin_chrom.ipynb  demo_nsls2apcluster_node_tmp_cleanup.ipynb  demo_nsls2clusters_node_tmp_cleanup.ipynb  demo_offmom_closed_orbits.ipynb  demo_rpn.ipynb  demo_tuneshift_w_amp.ipynb  lattice3.lte  lattice3Sext_19pm3p2m_5cell.lte  nsls2.flr  nsls2cb65pm.lte  nsls2cb72pm_LS_SS_LS_ZeroSexts.lte  rpn_var_func_availability.ipynb
dev_test/moga/full_w_sdds/: GuideToUse  checkStatus  computeLifetime  computeLifetime.py  modify_input_sdds.py  runJob1.py
dev_test/moga/integrated_w_sdds/: checkStatus.py  evalTemplate.ele  main.py  matchTemplate.ele  processJob1.py  runJob1.py  sample.lte
dev_test/moga/unittest/: aps.lte  evalTemplate.ele  geneticOptimizer.local  matchTemplate.ele  runJob1  (+7 more)
dev_test/mpi_re_init_crash/: import_mpi.py  test_mpi_re_init_crash.py
report_templates/: CLSmod23pm_20200123T160920_moga_prod_v1_002708.lte  input.yaml  nsls2.py  nsls2.yaml  nsls2_autogen.yaml  nsls2_autogen_min.yaml  nsls2lattice_report.py  report_config.yaml
src/pyelegant/: Touschek_F_interpolator.pkl  __init__.py  correct.py  elebuilder.py  elegant_elem_dict.yaml  eleutil.py  errors.py  geneopt.py  latex.py  linopt_correct.py  local.py  ltemanager.py  lteparser.py  nonlin.py  notation.py  nsls2apcluster.py  nsls2apcluster_mpi_script.py  nsls2apcluster_srun_py_func_script.py  nsls2pluto.py  nsls2pluto_mpi_executor.py  nsls2pluto_mpi_script.py  nsls2pluto_srun_py_func_script.py  orbit.py  remote.py  respmat.py  sdds.py  sigproc.py  twiss.py  util.py
tests/: test.py  test_hybridsimplex.py  test_mpi_exec.py  test_mpi_exec_timeout.py
(+27 files in other folders)
